# oura_cli_rs

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  LICENSE
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: client.rs  lib.rs  models.rs
crates/core/src/adapters/: mod.rs
crates/core/src/adapters/oura/: client.rs  mod.rs  models.rs  sleep.rs
crates/core/src/ports/: sleep.rs
docs/oura_api/: README.md
docs/superpowers/plans/: 2026-04-05-phase1.md  2026-04-06-command-dispatch.md
docs/superpowers/specs/: 2026-04-05-phase1-design.md  2026-04-06-command-dispatch-design.md
oura_cli/: Cargo.toml
oura_cli/src/: command.rs  display.rs  main.rs  util.rs
src/: main.rs
