[workspace]
resolver = "3"
members = ["crates/core", "oura_cli"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Rui Iizumi <rui.iizumi.20+job@gmail.com>"]
description = "Oura CLI written by Rust"
license = "MIT"

rust-version = "1.94.1"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
oura_core = { path = "crates/core" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "chrono"] }
