[package]
name = "oura_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
